crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__config_recovery_15.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"{你好\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "你好",
                                                filename: "",
                                                line: 1,
                                                column: 1,
                                                end_line: 1,
                                                end_column: 3,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 3,
                            },
                        ),
                        value: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "你好",
                                            filename: "",
                                            line: 1,
                                            column: 1,
                                            end_line: 1,
                                            end_column: 3,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 1,
                            end_line: 1,
                            end_column: 3,
                        },
                        operation: Override,
                        is_shorthand: true,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 3,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}
